--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -15,6 +15,8 @@
   <!-- JQurey first to have scripts inside ng-views -->
   <script src="assets/js/jquery-3.3.1.min.js"></script>
 
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <!-- JS for data table wizardry
   <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.16/js/dataTables.semanticui.min.js"></script> -->
@@ -47,6 +49,9 @@
   <!--   Misc CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
 
 
 </head>
