--- a/public/app/views/pages/events/createEvent.html
+++ b/public/app/views/pages/events/createEvent.html
@@ -1,4 +1,9 @@
 <br>
+<script>
+  $( function() {
+    $( "#date" ).datepicker({ dateFormat: 'dd-mm-yy' });
+  } );
+  </script>
 <div class="ui segment">
   <h1>Create Event</h1>
   <form class="ui form success error" ng-submit="event.createEvent(eventData);" name="eventForm" novalidate id="eventForm">
@@ -35,7 +40,7 @@
 
       <div class="six wide field">
         <label class="ui primary label">Date</label>
-        <input ng-disabled="event.disabled" placeholder="Date" type="date" name="date" ng-model="event.eventData.date" id="date">
+        <input ng-disabled="event.disabled"  type="text" name="date" ng-model="event.eventData.date" id="date">
       </div>
     </div>
 
