View event now shows general information. Includes menus

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -107,9 +107,9 @@
     </div>
 
     <div class="ui text container">
-      <h1 class="ui inverted header">
+      <!-- <h1 class="ui inverted header">
         Outreach Moldova Events
-      </h1>
+      </h1> -->
       <div ng-view></div>
       <br>
     </div>
