--- a/public/app/views/pages/about.html
+++ b/public/app/views/pages/about.html
@@ -1,4 +1,4 @@
 <br>
 <div class="ui text">
-	<h1>Hello {{ main.username }} from About Route</h1>
+	<h1 class="ui inverted header">Hello {{ main.username }} from About Route</h1>
 </div>
