--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,4 +1,4 @@
 <br>
 <div class="ui text">
-	<h1 ng-show="main.isLoggedIn">Welcome, {{ main.username }}</h1>
+	<h1 class="ui inverted header" ng-show="main.isLoggedIn">Welcome, {{ main.username }}</h1>
 </div>
