--- a/public/app/views/pages/events/createEvent.html
+++ b/public/app/views/pages/events/createEvent.html
@@ -173,13 +173,13 @@
             prompt: 'Name must be less than 40 characters'
           }]
         },       
-        date: {
-          identifier: 'date',
-          rules: [{
-            type: 'empty',
-            prompt: 'Please select a date'
-          }]
-        },
+        // date: {
+        //   identifier: 'date',
+        //   rules: [{
+        //     type: 'empty',
+        //     prompt: 'Please select a date'
+        //   }]
+        // },
         seats: {
           identifier: 'seats',
           rules: [{
