--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,4 +1,5 @@
 <br>
 <div class="ui text">
 	<h1 class="ui inverted header" ng-show="main.isLoggedIn">Welcome, {{ main.username }}</h1>
+	<h1 class="ui inverted header" ng-show="!main.isLoggedIn">Outreach Moldova Events</h1>
 </div>
