--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -10,6 +10,7 @@
                     <th>Tables</th>
                     <th>Seats</th>
                     <th>Menu</th>
+                    <th>Dietary</th>
                 </tr>
             </thead>
             <tbody>
@@ -20,6 +21,7 @@
                     <th>{{viewEvent.tables}}</th>
                     <th>{{viewEvent.seats}}</th>
                     <th><a target="_blank" href={{viewEvent.menu}}>Menu</a></th>
+                    <th>{{viewEvent.dietary}}</th>
                 </tr>
             </tbody>
         </table>
