Front end for creating emails

--- a/public/app/views/pages/events/createEvent.html
+++ b/public/app/views/pages/events/createEvent.html
@@ -5,7 +5,7 @@
   } );
   </script>
 <div class="ui segment">
-  <h1 class="ui header">Create Event</h1>
+  <h1>Create Event</h1>
   <form class="ui form success error" ng-submit="event.createEvent(eventData);" name="eventForm" novalidate id="eventForm">
     <h4 class="ui dividing header">Basic Info</h4>
     <div class="two fields">
