--- a/public/app/views/pages/management/edit.html
+++ b/public/app/views/pages/management/edit.html
@@ -28,7 +28,7 @@
         <div class="ui bottom attached tab segment" data-tab="third">
             <form class="ui form success error" ng-submit="edit.updateEmail(newEmail);" name="emailForm" novalidate id="emailForm">
                 <div class="field">
-                    <label class="ui label">Edit Username</label>
+                    <label class="ui label">Edit Email</label>
                     <input ng-disabled="edit.disabled" placeholder="Email" type="text" name="email" ng-model="newEmail" id="email" required>
                 </div>
                 <button ng-disabled="edit.disabled" class="ui small primary button" type="submit">Update</button>
